# ROS_basics_in_5_days

./: README.md  ros1_demo_talking_script.markdown  ros2_demo_talking_script.markdown
catkin_ws/: DEPLOYMENT_GUIDE.md  IMPROVEMENTS.md  LAUNCH_FIX.md  README_FSM.md  SERVICE_ARCHITECTURE.md  find_wall_final_version.py  laser_scan_data_to_distance.md  logger_timer_issue.md  odom_result_client_final_version.py  record_odom_server_final_version.py  ros1_wall_finder_main_control_logic.py  ros1_wall_finder_main_control_logic.txt  ros1_wall_follower_main_control_logic.py  ros1_wall_follower_main_control_logic.txt  vs_code_chat.md  vs_code_chat_his.md  vs_code_chat_his_2.md  wall_finder_commenting.py  wall_finder_minimal.py  wall_follower_commenting.py  wall_follower_minimal.py  wall_following_final_version.py
catkin_ws/devel/: .catkin  local_setup.fish  local_setup.sh
catkin_ws/devel/include/wall_following/: FindWall.h  FindWallRequest.h  FindWallResponse.h
catkin_ws/devel/lib/pkgconfig/: scan_test.pc  wall_following.pc
catkin_ws/devel/lib/python3/dist-packages/wall_following/srv/: _FindWall.py
catkin_ws/devel/lib/wall_following/: find_wall.py
catkin_ws/devel/share/common-lisp/ros/wall_following/srv/: FindWall.lisp  _package.lisp  _package_FindWall.lisp  wall_following-srv.asd
catkin_ws/devel/share/gennodejs/ros/wall_following/srv/: FindWall.js
catkin_ws/devel/share/roseus/ros/wall_following/: manifest.l
catkin_ws/devel/share/roseus/ros/wall_following/srv/: FindWall.l
catkin_ws/devel/share/scan_test/cmake/: scan_testConfig.cmake
catkin_ws/devel/share/wall_following/cmake/: wall_following-msg-paths.cmake  wall_followingConfig.cmake
catkin_ws/src/: CMakeLists.txt
catkin_ws/src/Action/action/: Name.action
catkin_ws/src/Service/launch/: my_robot_arm_demo.launch  start_bb8_move_in_circle_service_server.launch
catkin_ws/src/Service/srv/: BB8CustomServiceMessage.srv
catkin_ws/src/log_print_example/launch/: start_logger_example.launch
catkin_ws/src/wall_following/: CMakeLists.txt  package.xml
catkin_ws/src/wall_following/launch/: main.launch  wall_following.launch
catkin_ws/src/wall_following/scripts/: find_wall.py  odom_result_client.py  record_odom_server.py  wall_follower.py
ros2_ws/: 2025-08-15-chat_claude.md  CORRECT_laser_geometry_config.md  control_logic_why_rotational_speed.md  conversational_breakdown_of_project.md  conversational_walk-through_control_logic.md  instructions.md  laser_config_180_not_360.md  laser_scan_method_compare.md  odom_recorder.py  presentation.md  presentation_project_ros1.md  read_me_.md  sector_based_laser_scan.md  sensitive_issue.md  vs_code_chat.md  wall_finder_commenting.py  wall_finder_final_version_real_robot_slow_loggerTimer.txt  wall_finder_final_version_real_robot_with_comments.txt  wall_finder_final_version_v1.txt  wall_finder_fsm.py  wall_finder_laser_config_180_degree.py  wall_finder_minimal.py  wall_finder_sector_based_laser_scan.py  wall_follower_project_enhanced.md  wall_following_final_version_real_robot_slow_loggerTimer.txt  wall_following_final_version_real_robot_with_comments.txt  wall_following_final_version_real_robot_without_comment.txt  wall_following_final_version_v1.txt  wall_following_fsm.py  wall_following_laser_index_mapping.md  wall_following_minimal.py  wall_following_minimalist.py  wall_following_sector_based_laser_scan.py  wall_following_simple_version.py
ros2_ws/Action/: setup__.py
ros2_ws/Service/: setup.py  setup_.py  setup__.py  setup___.py  setup____.py
ros2_ws/Service/scripts/: services_quiz_client.launch.py  services_quiz_server.launch.py  setup.py  turn_s_client.py  turn_s_server.py
ros2_ws/Service/srv/: Int32.msg
ros2_ws/Topic/: setup.py  setup_.py  setup___.py  setup____.py
ros2_ws/Topic/scripts/: setup.py  topics_quiz.py  topics_quiz_launch.py
