<?xml version="1.0"?>
<package format="2">
  <name>ros_wall_following</name>
  <version>0.0.1</version>
  <description>Wall following, wall finding, and odometry recording behaviors for a virtual robot</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <build_depend>std_srvs</build_depend>
  <exec_depend>std_srvs</exec_depend>
  <build_depend>message_runtime</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
 <exec_depend>actionlib</exec_depend>
 <build_depend>actionlib_msgs</build_depend>
 <exec_depend>actionlib_msgs</exec_depend>



  <export>
  </export>
</package>

